# woflchess

./: .gitignore  README.md  commentary.md  g-petey_prompt_n_code_response.txt  needs.txt  requirements.txt  scratch.txt
docs/: ChessNeural_instructios.txt  Claude's_ChessNeural-v.5.0.0_instructions.md  g-petey's_ideas.txt  needs.txt  neural_weights.json  scrtch.txt
src/: Claude's_ChessNeural-v.5.0.B.rs  ClaudeChessNerual.v.1.0.0.rs  ClaudeChessNerual.v.1.1.0.rs  ClaudeChessNerual.v.2.0.0.rs  ClaudeChessNerual.v.3.0.0.rs  ClaudeChessNerual.v.4.0.0.rs  ClaudeChessNerual.v.4.2.0.rs  ClaudeChessNerual.v.4.7.0.rs  ClaudeChessNerual.v.4.8.0.rs  ClaudeChessNerual.v.5.0.0.rs  RYO_Vert_MX_Patch_Ideas.txt  claudesChessNerual.rs  claudesChessNerual.v.0.1.0.rs  claudesChessNerual.v.0.1.1.rs  claudesChessNerual.v.0.1.3.rs  claudesChessNerual.v.0.1.8.rs  claudesChessNerual.v.0.1.9.rs  claudesChessNerual.v.0.2.0.rs  claudesChessNerual.v.0.2.1.rs  claudesChessNerual.v.0.2.2.rs  claudesChessNerual.v.0.3.0.rs  claudesChessNerual.v.0.3.2.rs  claudesChessNerual.v.0.3.3.rs  main_og.rs  pateysChessNerual.v.0.3.4.rs  pateysChessNerual.v.0.4.0.rs  pateysChessNerual.v.0.4.1.rs  pateysChessNerual.v.0.4.2.rs  pateysChessNerual.v.0.4.3.rs  petey'sChessNerual.v.0.1.4.rs  petey'sChessNerual.v.0.1.6.rs  petey'sChessNerual.v.0.1.7.rs  petey_off_on_0.0.1.rs  petey_off_on_2.0.1.rs  (+23 more)
src/modularized/v.7.1.0/: Cargo.toml  Claude's_ChessNeural-v.7.1.0_instructions.md  build.rs  game-v.7.1.0.rs  main-v.7.1.0.rs  neural-v.7.1.0.rs  neural_weights.json  server-v.7.1.0.rs  types-v.7.1.0.rs
(+45 files in other folders)
