[package]
name = "claudes_chess_neural"
version = "6.2.0"
edition = "2021"

[lib]
name = "claudes_chess_neural"
path = "src/lib.rs"

[[bin]]
name = "claudes_chess_neural"
path = "src/main.rs"

[dependencies]
warp = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ctrlc = "3.2"
colored = "2.0"
bitflags = "1.3"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.13.2", features = ["v4", "serde"] }

[build-dependencies]
winres = "0.1.12"  # Moved from [dependencies] to [build-dependencies]
